--- a/TasksDatabase.csproj
+++ b/TasksDatabase.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20191028191621_v1.cs" />
+    <Compile Remove="Migrations\20191028191621_v1.Designer.cs" />
+    <Compile Remove="Migrations\20191029013607_init.cs" />
+    <Compile Remove="Migrations\20191029013607_init.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
@@ -15,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Views\Admin\" />
   </ItemGroup>
 
