Готовая таблица заданий

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,10 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=TasksDatabase; Trusted_Connection=True"
   },
 
+  "Pagination": {
+    "TasksPerPage": 10
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
